crates/astroforge-ir/tests/snapshots/snapshot_runtime__event_handler_shape.snap
---
source: crates/astroforge-ir/tests/snapshot_runtime.rs
expression: "EventHandler { method: \"handleClick\".into(), }"
---
{
  "method": "handleClick"
}
