crates/astroforge-ir/tests/snapshots/snapshot_runtime__opt_value_modifiers.snap
---
source: crates/astroforge-ir/tests/snapshot_runtime.rs
expression: node
---
{
  "creator": "builtin",
  "tag": "text",
  "opts": {
    "modifiers": {
      "kind": "modifiers",
      "value": {
        "value": {
          "static": true
        }
      }
    }
  },
  "children": []
}
