crates/astroforge-ir/tests/snapshots/snapshot_runtime__runtime_node_builtin_static_text.snap
---
source: crates/astroforge-ir/tests/snapshot_runtime.rs
expression: node
---
{
  "creator": "builtin",
  "tag": "text",
  "opts": {
    "value": {
      "kind": "static",
      "value": "Hello, Vela!"
    }
  },
  "children": []
}
