crates/astroforge-ir/tests/snapshots/snapshot_runtime__style_entry_compound_and_grouped_selectors.snap
---
source: crates/astroforge-ir/tests/snapshot_runtime.rs
expression: entry
---
{
  "selectors": [
    [
      [
        0,
        "card"
      ],
      [
        0,
        "active"
      ]
    ],
    [
      [
        1,
        "main"
      ]
    ]
  ],
  "declarations": {
    "flexDirection": "column",
    "backgroundColor": "#1a1a1a"
  }
}
